--- a/views/partials/layouts/base.hbs
+++ b/views/partials/layouts/base.hbs
@@ -25,7 +25,9 @@
 </head>
 
 <body>
-  {{> includes/nav }}
+  <div id="container">
+    {{> includes/nav }}
+  </div>
   
   {{#> content-block }}
   {{/content-block }}
