--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,14 @@
     border: 1px solid white;
     padding: 5px 10px 0px 10px;
     border-radius: 0.5rem;
+    font-size: 0.4rem;
+    color: #fff;
+    font-weight: bold;
+}
+#i19n {
+    border: 1px solid white;
+    padding: 5px 10px 0px 10px;
+    border-radius: 0.5rem;
     font-size: 0.2rem;
 }
 
