--- a/views/partials/includes/nav.hbs
+++ b/views/partials/includes/nav.hbs
@@ -32,9 +32,12 @@
                         <li>
                             <a href="/index#pricing">{{ translation.TEAM }}</a>
                         </li>
-                        {{!-- <li id="i18n"><a href="/index?clang=zh" id="language">中文</a></li>
-                        <li id="i19n"><a href="/index?clang=en">English</a></li> --}}
-                        <li id="i18n">中文</li>
+                        <li>
+                            {{!-- <a href="JavaScript：void(0)"  id="i18n">中文</a> --}}
+                            <div id="i18n">中文</div>
+                        </li>
+                        {{!-- <li id="i19n"><a href="/index?clang=en">English</a></li>
+                        {{!-- <li id="i18n">中文</li> --}}
                         {{!-- <li id="i18n"><a href="/index?clang=zh" id="language">English</a></li> --}}
                         <!--<li class="last">
                             <a href="#subscribe">Subscribe</a>
