--- a/views/partials/layouts/basic.hbs
+++ b/views/partials/layouts/basic.hbs
@@ -17,7 +17,7 @@
       {{/if}}
     </title>
     <!-- Bootstrap core CSS-->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom fonts for this template-->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -29,6 +29,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.min.css" rel="stylesheet">
+     <link href="css/style.css" rel="stylesheet">
   </head>
 
 
