--- a/views/partials/includes/nav.hbs
+++ b/views/partials/includes/nav.hbs
@@ -6,7 +6,7 @@
                 <!--begin twelvecol -->
                 <div class="twelvecol">
                     <!--begin logo -->
-                    <a href="index.html" id="logo"><img src="images/logo.png"></a>
+                    <a href="/" id="logo"><img src="images/logo.png"></a>
                     <!--end logo -->
                     <!--begin purchase button -->
                     <!--<a href="#" class="purchase">Purchase Now</a>-->
