--- a/views/partials/layouts/base.hbs
+++ b/views/partials/layouts/base.hbs
@@ -28,6 +28,7 @@
   <div id="container">
     {{> includes/nav }}
   </div>
+  <div style="height:50px"></div>
   {{#> content-block }}
   {{/content-block }}
 
