--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2484,7 +2484,7 @@ table.responsive th{font-size:16px;line-height:40px;}
 	.profile_new .pro_img img{float:left;}
 	.profile_new .pro_img .txt .tit{text-align:left;padding:0px;}
 }
-#outer{min-height:540px;margin-top: 60px;}
+#outer{min-height:540px;}
 .cart_table{overflow:hidden;}
 .profile_new{max-width:1000px;margin:0 auto;}
 
