--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -16,14 +16,13 @@
             <div class="profile_new clearfix">
                 <div id="outer">
                     <div id="tab">
-                    <div class="img"><img src="images/15.jpg"></div>
+                    <div class="img"><img src="images/15.jpg"><div class="set_quit_new" id="signOut"><i class="fa fa-power-off" aria-hidden="true"></i>{{ translation.PROFILE_MENU_SIGNOUT }}</div></div>
                     <div class="name text_align_center"><span id="profile_name"></span></div>
                     <ul class="clearfix">
                         <li class="current"><i class="fa fa-tags" aria-hidden="true"></i>{{ translation.PROFILE_MENU_ORDERS }}</li>
                         <li><i class="fa fa-gift" aria-hidden="true"></i>{{ translation.PROFILE_MENU_VOUCHERS }}</li>
                         <li><i class="fa fa-address-book" aria-hidden="true"></i>{{ translation.PROFILE_MENU_ADDRESSES }}</li>
                         <li><i class="fa fa-wrench" aria-hidden="true"></i>{{ translation.PROFILE_MENU_SETTINGS }}</li>
-                        <li id="signOut"><i class="fa fa-sign-out" aria-hidden="true"></i>{{ translation.PROFILE_MENU_SIGNOUT }}</li>
                     </ul>
                     </div>
                     <div id="content">
