--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -42,11 +42,11 @@
                                 </div>
                             </div>
                         </td>
-                        <td class="price">￥11999</td>
+                        <td class="price">$1820</td>
                         {{!-- <td class="num"><input class="num_input" type="text" value="1"></td> --}}
                         <td class="num"><span>1<span></td>
                         <td class="price_total">
-                            ￥11999
+                            $1820
                         </td>
                     </tr>
                     </tbody>
@@ -153,14 +153,18 @@
 <div class="cd-popup3">
     <div class="cd-popup-container1">
         <div class="money_title text_align_left">
-            <div class="t">您想要立即支付吗？</div>
-            <div class="c">您将需要选择一个安全的方式来完成支付！</div>
+            <div class="t">Would you like to pay immediately?</div>
+            <div class="c">You will need to choose a safe way to complete the payment!
+</div>
         </div>
         <div class="money_con">
             <div class="tip_logo"><img src="images/721.png"></div>
-           <div class="tip"><p>像MetaMask这样的安全钱包即是完美之地。</p><p>同时您也可以通过钱包进入游戏（无需另设密码）</p></div>
+           <div class="tip"><p>A secure wallet like MetaMask is the perfect place to be.
+</p><p>You can also enter the game through your wallet (no extra password required)
+</p></div>
             <a class="money_but" href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=en">从Chrome网上商店获取</a>
-               <div class="tips">本功能只适合在非移动端使用</div>
+               <div class="tips">This feature is only suitable for use on non-mobile terminals
+</div>
         </div>
         <a href="#0" class="cd-popup-close">X</a>
     </div>
