--- a/views/forgot-password.hbs
+++ b/views/forgot-password.hbs
@@ -2,7 +2,7 @@
 
   {{#*inline "content-block"}}
     <div class="card card-login mx-auto mt-5">
-      <div class="card-header">重置密码</div>
+      <div class="card-header">reset password</div>
       <div class="card-body">
         <div class="text-center mt-4 mb-5">
           <h4>Forgot your password?</h4>
