--- a/views/order_detail.hbs
+++ b/views/order_detail.hbs
@@ -30,27 +30,27 @@
             <!--sub_order_product end-->
             <!--sub_order_deli start-->
                 <div class="sub_order_deli">
-                    <div class="li_l">发货时间</div>
+                    <div class="li_l">The delivery time</div>
                     <div class="li_r">
-                        <p>预计 2018年 9月 陆续发货</p>
+                        <p>It is expected to be in September 2018</p>
                         {{!-- <p>Delivery:9 July,2016 by pre-9:30am Delivery</p>
                         <div class="more_date">Delivery:9 July,2016 by pre-9:30am Delivery</div> --}}
                     </div>
                 </div>
                 <div class="sub_order_deli">
-                     <div class="li_l">产品简介</div>
+                     <div class="li_l">Product introduction</div>
                      <div class="li_r">
                         <p>We will notify you as items are dispatched</p>
                     </div>
                 </div>
                 <div class="sub_order_deli">
-                     <div class="li_l">数量</div>
+                     <div class="li_l">The number of</div>
                      <div class="li_r">
                         <p>1</p>
                     </div>
                 </div>
                 <div class="sub_order_deli">
-                     <div class="li_l">产品价格</div>
+                     <div class="li_l">price</div>
                      <div class="li_r">
                         {{!-- <p style="color:'#ff0000'"></p> --}}
                         <strong style="color:#ff0000">$1820</strong>
