--- a/views/partials/includes/admin_navbar.hbs
+++ b/views/partials/includes/admin_navbar.hbs
@@ -9,7 +9,8 @@
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="仪表盘">
         <a class="nav-link" href="/dashboard.html">
           <i class="fa fa-fw fa-dashboard"></i>
-          <span class="nav-link-text">仪表盘</span>
+          <span class="nav-link-text">The dashboard
+</span>
         </a>
       </li>
 
@@ -17,7 +18,8 @@
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="订单">
         <a class="nav-link" href="orders.html">
           <i class="fa fa-fw fa-tasks"></i>
-          <span class="nav-link-text">订单</span>
+          <span class="nav-link-text">The order
+</span>
         </a>
       </li>
     </ul>
@@ -125,7 +127,8 @@
 
       <li class="nav-item">
         <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa fa-fw fa-sign-out"></i>注销</a>
+          <i class="fa fa-fw fa-sign-out"></i>The cancellation
+</a>
       </li>
     </ul>
   </div>
