--- a/views/确认支付成功页面.html
+++ b/views/确认支付成功页面.html
@@ -106,8 +106,8 @@
                       <div class="name text_align_center">Tiago M. Fernández-Caramés</div>
                  </div>
                 <div class="confirm_success_tip">
-                    <div class="confirm_success_tip_t">购买成功</div>
-                    <p>这是我们最好的产品，谢谢您的购买，祝您生活愉快！</p>
+                    <div class="confirm_success_tip_t">Buy success</div>
+                    <p>This is our best product. Thank you for your purchase and wish you a happy life!</p>
                 </div>
             </div>
             <!--confirm_success end-->
