--- a/views/确认支付页面.html
+++ b/views/确认支付页面.html
@@ -101,28 +101,31 @@
         <div class="nine_section">
           <!--confirm_success start-->
             <div class="confirm_success">
-                <div class="confirm_success_title">请支付您要购买的产品</div>
+                <div class="confirm_success_title">Please pay for the product you want to buy
+</div>
                 <div class="confirm_success_img"><img src="lib/images/722.png"></div>
                 <div class="confirm_success_price">
                     <ul>
                         <li class="clear_after">
-                            <div class="price_name fl">价钱</div>
-                            <div class="price_num frr">￥100</div>
+                            <div class="price_name fl">price</div>
+                            <div class="price_num frr">$1820</div>
                         </li>
                         <li class="clear_after">
-                            <div class="price_name fl">优惠后价钱</div>
-                            <div class="price_num frr">￥100</div>
+                            <div class="price_name fl">preferential</div>
+                            <div class="price_num frr">$1820</div>
                         </li>
                         <li class="clear_after">
-                            <div class="price_name fl">总价</div>
-                            <div class="price_num frr">￥100</div>
+                            <div class="price_name fl">The total price</div>
+                            <div class="price_num frr">$1820</div>
                         </li>
                     </ul>
                 </div>
                 <div class="confirm_success_tip">
-                    <p>这是我们最好的产品，谢谢您的购买，祝您生活愉快！</p>
+                    <p>This is our best product. Thank you for your purchase and wish you a happy life!
+</p>
                 </div>
-                <div class="confirm_success_but"><a class="confirm_success_but_a" href="">确认购买</a> </div>
+                <div class="confirm_success_but"><a class="confirm_success_but_a" href="">Confirm the purchase
+</a> </div>
             </div>
             <!--confirm_success end-->
         </div>
