--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -10,15 +10,18 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="dashboard.html">仪表盘</a>
+          <a href="dashboard.html">The dashboard
+</a>
         </li>
-        <li class="breadcrumb-item active">订单</li>
+        <li class="breadcrumb-item active">The order
+</li>
       </ol>
 
       <!-- 重磅内容 -->
       <div class="card mb-3">
         <div class="card-header">
-          <i class="fa fa-newspaper-o"></i> 添加订单</div>
+          <i class="fa fa-newspaper-o"></i> Add the order
+</div>
         <div class="card-body">
             <form id="formCreate" autocomplete="off">
               <div class="col-lg-12">
