--- a/views/order.hbs
+++ b/views/order.hbs
@@ -37,15 +37,17 @@
                             <div class="pro_td">
                                 <img src="images/pro11.jpg">
                                 <div class="txt">
-                                    <div class="name">第一代高性能笛卡尔矿机</div>
-                                    <div class="c">第一代高性能笛卡尔矿机,第一代高性能笛卡尔矿机</div>
+                                    <div class="name">First generation high performance cartesian mining machine</div>
+                                    <div class="c">First generation high performance cartesian mining machine
+,First generation high performance cartesian mining machine
+</div>
                                 </div>
                             </div>
                         </td>
-                        <td class="price">￥11999</td>
+                        <td class="price">$1820</td>
                         <td class="num"><input class="num_input" type="text" value="1"></td>
                         <td class="price_total">
-                            ￥11999
+                            $1820
                         </td>
                     </tr>
                     <tr>
@@ -53,15 +55,18 @@
                             <div class="pro_td">
                                 <img src="images/pro11.jpg">
                                 <div class="txt">
-                                    <div class="name">第一代高性能笛卡尔矿机</div>
-                                    <div class="c">第一代高性能笛卡尔矿机,第一代高性能笛卡尔矿机</div>
+                                    <div class="name">First generation high performance cartesian mining machine
+</div>
+                                    <div class="c">First generation high performance cartesian mining machine
+,First generation high performance cartesian mining machine
+</div>
                                 </div>
                             </div>
                         </td>
-                        <td class="price">￥11999</td>
+                        <td class="price">$1820</td>
                         <td class="num"><input class="num_input" type="text" value="1"></td>
                         <td class="price_total">
-                            ￥11999
+                            $1820
                         </td>
                     </tr>
                     <tr>
@@ -69,15 +74,18 @@
                             <div class="pro_td">
                                 <img src="images/pro11.jpg">
                                 <div class="txt">
-                                    <div class="name">第一代高性能笛卡尔矿机</div>
-                                    <div class="c">第一代高性能笛卡尔矿机,第一代高性能笛卡尔矿机</div>
+                                    <div class="name">First generation high performance cartesian mining machine
+</div>
+                                    <div class="c">First generation high performance cartesian mining machine
+,First generation high performance cartesian mining machine
+</div>
                                 </div>
                             </div>
                         </td>
-                        <td class="price">￥11999</td>
+                        <td class="price">$1820</td>
                         <td class="num"><input class="num_input" type="text" value="1"></td>
                         <td class="price_total">
-                            ￥11999
+                            $1820
                         </td>
                     </tr>
                     </tbody>
