--- a/views/partials/includes/admin_logout.hbs
+++ b/views/partials/includes/admin_logout.hbs
@@ -3,15 +3,19 @@
   <div class="modal-dialog" role="document">
       <div class="modal-content">
       <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">确定要退出吗？</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to quit?
+</h5>
           <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
           </button>
       </div>
-      <div class="modal-body">点击【注销】退出当前管理页面.</div>
+      <div class="modal-body">Click cancel to exit the current management page
+.</div>
       <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">取消</button>
-          <a class="btn btn-primary" href="signin.html">注销</a>
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">cancel
+</button>
+          <a class="btn btn-primary" href="signin.html">The cancellation
+</a>
       </div>
       </div>
   </div>
