--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -53,7 +53,7 @@
                         <button id="btnSignIn" class="btn">{{ translation.SIGNIN_LOGIN }}</button>
                     </div>
                     <div class="login_bottom">
-                    还没有账号，
+                     Don't have a account yet?
                         <a class="" href="/signup">{{ translation.SIGNIN_REGISTER }}</a>
                         
                     </div>
